--- a/index.html
+++ b/index.html
@@ -188,18 +188,24 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
-              <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
-              <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">C#</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">HTML/CSS</div>
+              <div class="skills__skill">Unity</div>
+              <div class="skills__skill">Unreal Engine 4/5</div>
+              <div class="skills__skill">Level Design</div>
+              <div class="skills__skill">Playtesting</div>
               <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">GitHub</div>
+              <div class="skills__skill">SVN</div>
+              <div class="skills__skill">Visual Studio</div>
+              <div class="skills__skill">Jetbrains Rider</div>
+              <div class="skills__skill">Desktop</div>
+              <div class="skills__skill">Mobile</div>
+              <div class="skills__skill">3D Modelling/Animation</div>
+              <div class="skills__skill">Virtual Production</div>
+              <div class="skills__skill">Miro</div>
+              <div class="skills__skill">Slack</div>
             </div>
           </div>
         </div>
@@ -351,14 +357,14 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/jack-waldron-66175b20a/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/Foodle1">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
@@ -372,7 +378,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!--<a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
@@ -381,11 +387,11 @@
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
-                  class="main-footer__icon main-footer__icon--mr-none"
+                  class="main-footer__icon main-footer__icon&#45;&#45;mr-none"
                   src="./assets/png/insta-ico.png"
                   alt="icon"
                 />
-              </a>
+              </a>-->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
