--- a/project-1.html
+++ b/project-1.html
@@ -27,7 +27,7 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Jack Waldron</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,41 +84,101 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 1</h1>
+        <h1 class="heading-primary">Starfighter: Earth's Only Hope</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            This is a VR action spaceflight game developed during IGB388 Design and Development of Immersive Environments
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+<!--          <a href="#" class="btn btn&#45;&#45;bg" target="_blank">Live Link</a>-->
+          <iframe frameborder="0"
+                  height="167"
+                  src="https://itch.io/embed/2099661?bg_color=080808&amp;fg_color=dbdbdb&amp;border_color=2a2a2a" width="552">
+            <a href="https://foodle.itch.io/starfighter-earths-only-hope">Starfighter: Earth's Only Hope by Jack Waldron</a>
+          </iframe>
         </div>
       </div>
     </section>
     <section class="project-details">
       <div class="main-container">
         <div class="project-details__content">
-          <div class="project-details__showcase-img-cont">
+          <!--<div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
-              alt="Project Image"
+              src="./assets/png/earths-only-hope.png"
+              alt="Starfighter: Earth's Only Hope Image"
               class="project-details__showcase-img"
             />
+          </div>-->
+          <div class="slideshow-container">
+
+            <div class="mySlides fade">
+              <!--<div class="numbertext">1 / 3</div>-->
+              <img src="assets/png/starfighter1.png" style="width:100%; height:100%">
+              <!--<div class="text">Caption Text</div>-->
+            </div>
+
+            <div class="mySlides fade">
+              <!--<div class="numbertext">2 / 3</div>-->
+              <img src="assets/png/starfighter2.png" style="width:100%; height:100%">
+              <!--<div class="text">Caption Two</div>-->
+            </div>
+
+            <div class="mySlides fade">
+              <!--<div class="numbertext">3 / 3</div>-->
+              <img src="assets/png/starfighter3.png" style="width:100%; height:100%">
+              <!--<div class="text">Caption Three</div>-->
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
           </div>
+          <br>
+
+          <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div>
+
+          <script>
+            let slideIndex = 1;
+            showSlides(slideIndex);
+
+            function plusSlides(n) {
+              showSlides(slideIndex += n);
+            }
+
+            function currentSlide(n) {
+              showSlides(slideIndex = n);
+            }
+
+            function showSlides(n) {
+              let i;
+              let slides = document.getElementsByClassName("mySlides");
+              let dots = document.getElementsByClassName("dot");
+              if (n > slides.length) {slideIndex = 1}
+              if (n < 1) {slideIndex = slides.length}
+              for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+              }
+              for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+              }
+              slides[slideIndex-1].style.display = "block";
+              dots[slideIndex-1].className += " active";
+            }
+          </script>
+
           <div class="project-details__content-main">
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
+                During development of Starfighter: Earth's Only Hope I Acted as lead
+                programmer, working with another programmer and a game designer.
+                This game started as my own pitch, then evolving into the game it is
+                after incorporating elements from the rest of the groups pitches.
               </p>
               <p class="project-details__desc-para">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
@@ -130,18 +190,15 @@
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
+                <div class="skills__skill">C#</div>
+                <div class="skills__skill">Unity</div>
+                <div class="skills__skill">OpenXR</div>
+                <div class="skills__skill">Oculus SDK</div>
                 <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
+                <div class="skills__skill">GitHub</div>
+                <div class="skills__skill">SCRUM</div>
+                <div class="skills__skill">Desktop</div>
                 <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
               </div>
             </div>
             <div class="project-details__links">
@@ -209,7 +266,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Jack Waldron</h4>
             <p class="main-footer__short-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
               tempora explicabo quae quod deserunt
