--- a/project-1.html
+++ b/project-1.html
@@ -103,36 +103,24 @@
     <section class="project-details">
       <div class="main-container">
         <div class="project-details__content">
-          <!--<div class="project-details__showcase-img-cont">
-            <img
-              src="./assets/png/earths-only-hope.png"
-              alt="Starfighter: Earth's Only Hope Image"
-              class="project-details__showcase-img"
-            />
-          </div>-->
           <div class="slideshow-container">
-
             <div class="mySlides fade">
               <!--<div class="numbertext">1 / 3</div>-->
-              <img src="assets/png/starfighter1.png" style="width:100%; height:100%">
+              <img src="assets/jpeg/starfighter1.jpg" style="width:100%; height:100%">
               <!--<div class="text">Caption Text</div>-->
             </div>
-
             <div class="mySlides fade">
               <!--<div class="numbertext">2 / 3</div>-->
-              <img src="assets/png/starfighter2.png" style="width:100%; height:100%">
+              <img src="assets/jpeg/starfighter2.jpg" style="width:100%; height:100%">
               <!--<div class="text">Caption Two</div>-->
             </div>
-
             <div class="mySlides fade">
               <!--<div class="numbertext">3 / 3</div>-->
-              <img src="assets/png/starfighter3.png" style="width:100%; height:100%">
+              <img src="assets/jpeg/starfighter3.jpg" style="width:100%; height:100%">
               <!--<div class="text">Caption Three</div>-->
             </div>
-
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
-
           </div>
           <br>
 
@@ -200,21 +188,6 @@
                 <div class="skills__skill">Desktop</div>
                 <div class="skills__skill">Android</div>
               </div>
-            </div>
-            <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
-              <a
-                href="#"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="#"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              >
             </div>
           </div>
         </div>
