--- a/project-1.html
+++ b/project-1.html
@@ -105,19 +105,18 @@
         <div class="project-details__content">
           <div class="slideshow-container">
             <div class="mySlides fade">
-              <!--<div class="numbertext">1 / 3</div>-->
-              <img src="assets/jpeg/starfighter1.jpg" style="width:100%; height:100%">
-              <!--<div class="text">Caption Text</div>-->
+              <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%">
             </div>
             <div class="mySlides fade">
-              <!--<div class="numbertext">2 / 3</div>-->
-              <img src="assets/jpeg/starfighter2.jpg" style="width:100%; height:100%">
-              <!--<div class="text">Caption Two</div>-->
+              <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%">
             </div>
             <div class="mySlides fade">
-              <!--<div class="numbertext">3 / 3</div>-->
-              <img src="assets/jpeg/starfighter3.jpg" style="width:100%; height:100%">
-              <!--<div class="text">Caption Three</div>-->
+              <img src="assets/starfighter/starfighter2.jpg" style="width:100%; height:100%">
+            </div>
+            <div class="mySlides fade">
+              <img src="assets/starfighter/starfighter3.jpg" style="width:100%; height:100%">
+            </div><div class="mySlides fade">
+              <img src="assets/starfighter/starfighter4.jpg" style="width:100%; height:100%">
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -128,6 +127,8 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
           </div>
 
           <script>
