Add more projects and rename project htmls

--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Starfighter: Earth's Only Hope</h3>
                   <p class="projects__row-content-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    IGB388 VR <br> ipsum dolor sit amet consectetur adipisicing elit. Hic
                     facilis tempora, explicabo quae quod deserunt eius sapiente
                     praesentium.
                   </p>
                   <a
-                          href="./project-1.html"
+                          href="projects/starfighter.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -264,12 +264,12 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Organ Defender</h3>
                   <p class="projects__row-content-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    Mini Jame Game 20 <br> ipsum dolor sit amet consectetur adipisicing elit. Hic
                     facilis tempora, explicabo quae quod deserunt eius sapiente
                     praesentium.
                   </p>
                   <a
-                          href="./project-2.html"
+                          href="projects/organ-defender.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -291,12 +291,93 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Sam's Town</h3>
                   <p class="projects__row-content-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    IGB200 Industry Project <br> ipsum dolor sit amet consectetur adipisicing elit. Hic
                     facilis tempora, explicabo quae quod deserunt eius sapiente
                     praesentium.
                   </p>
                   <a
-                          href="./project-3.html"
+                          href="projects/sams-town.html"
+                          class="btn btn--med btn--theme dynamicBgClr"
+                          target="_blank"
+                  >Case Study</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mySlides fade">
+              <!--Mars Base-->
+              <div class="projects__row">
+                <div class="projects__row-img-cont">
+                  <img
+                          src="./assets/jpeg/project-mockup-example.jpeg"
+                          alt="Software Screenshot"
+                          class="projects__row-img"
+                          loading="lazy"
+                  />
+                </div>
+                <div class="projects__row-content">
+                  <h3 class="projects__row-content-title">Mars Base</h3>
+                  <p class="projects__row-content-desc">
+                    Level design. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    facilis tempora, explicabo quae quod deserunt eius sapiente
+                    praesentium.
+                  </p>
+                  <a
+                          href="projects/mars-base.html"
+                          class="btn btn--med btn--theme dynamicBgClr"
+                          target="_blank"
+                  >Case Study</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mySlides fade">
+              <!--AI Pathfinding-->
+              <div class="projects__row">
+                <div class="projects__row-img-cont">
+                  <img
+                          src="./assets/jpeg/project-mockup-example.jpeg"
+                          alt="Software Screenshot"
+                          class="projects__row-img"
+                          loading="lazy"
+                  />
+                </div>
+                <div class="projects__row-content">
+                  <h3 class="projects__row-content-title">AI Pathfinding</h3>
+                  <p class="projects__row-content-desc">
+                    A* & Greedy <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    facilis tempora, explicabo quae quod deserunt eius sapiente
+                    praesentium.
+                  </p>
+                  <a
+                          href="projects/ai-pathfinding.html"
+                          class="btn btn--med btn--theme dynamicBgClr"
+                          target="_blank"
+                  >Case Study</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mySlides fade">
+              <!--Mad Dash Dispatch-->
+              <div class="projects__row">
+                <div class="projects__row-img-cont">
+                  <img
+                          src="./assets/jpeg/project-mockup-example.jpeg"
+                          alt="Software Screenshot"
+                          class="projects__row-img"
+                          loading="lazy"
+                  />
+                </div>
+                <div class="projects__row-content">
+                  <h3 class="projects__row-content-title">Mad Dash Dispatch</h3>
+                  <p class="projects__row-content-desc">
+                    A* & Greedy <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    facilis tempora, explicabo quae quod deserunt eius sapiente
+                    praesentium.
+                  </p>
+                  <a
+                          href="projects/mad-dash-dispatch.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -314,6 +395,8 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
           </div>
 
           <script>
@@ -362,7 +445,7 @@
                 praesentium.
               </p>
               <a
-                href="./project-1.html"
+                href="./starfighter.html"
                 class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -386,7 +469,7 @@
                 praesentium.
               </p>
               <a
-                href="./project-2.html"
+                href="./organ-defender.html"
                 class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -410,7 +493,7 @@
                 praesentium.
               </p>
               <a
-                href="./project-3.html"
+                href="./sams-town.html"
                 class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
