--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Jack Waldron</h1>
+        <h1 class="heading-primary">Jack Waldron</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            I am a <b>Game Developer</b> who has been developing games for a few years
+            and programming for longer. I enjoy learning new skills and pushing
+            my knowledge further as a developer.
           </p>
         </div>
         <div class="home-hero__cta">
-          <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a href="./#projects" class="btn btn--bg">My Projects</a>
         </div>
       </div>
-      <div class="home-hero__socials">
+      <!--<div class="home-hero__socials">
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
@@ -136,7 +136,7 @@
         <div class="home-hero__social">
           <a
             href="#"
-            class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
+            class="home-hero__social-icon-link home-hero__social-icon-link&#45;&#45;bd-none"
           >
             <img
               src="./assets/png/insta-ico.png"
@@ -148,7 +148,7 @@
       </div>
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
-      </div>
+      </div>-->
     </section>
     <section id="about" class="about sec-pad">
       <div class="main-container">
@@ -166,19 +166,24 @@
               <p class="about__content-details-para">
                 Hey! It's
                 <strong>Jack Waldron</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                and I'm a <strong> Game Programmer </strong> located in
+                Brisbane, Australia. I've done many game projects requiring vast
+                skill sets ranging from, Virtual Reality, Multiplayer, First-Person,
+                Tower Defence, Endless Survival, and more!
+                <!--I've done
                 <strong> remote </strong>
                 projects for agencies, consulted for startups, and collaborated
                 with talented people to create
                 <strong>digital products </strong>
-                for both business and consumer use.
+                for both business and consumer use.-->
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
+                If you feel I am a match for your project, I'm open to starting
+                a discussion, just <strong>contact</strong> me here.
+                <!--I'm a bit of a digital product junky. Over the years, I've used
                 hundreds of web and mobile apps in different industries and
                 verticals. Feel free to
-                <strong>contact</strong> me here.
+                <strong>contact</strong> me here.-->
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -204,6 +209,7 @@
               <div class="skills__skill">Mobile</div>
               <div class="skills__skill">3D Modelling/Animation</div>
               <div class="skills__skill">Virtual Production</div>
+              <div class="skills__skill">Trello</div>
               <div class="skills__skill">Miro</div>
               <div class="skills__skill">Slack</div>
             </div>
@@ -216,8 +222,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here are a range of some of my projects!
           </span>
         </h2>
 
