--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Jack Waldron Portfolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <meta name="description" content="Portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -20,13 +20,13 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <div class="header__logo-img-cont">
+          <!--<div class="header__logo-img-cont">
             <img
               src="./assets/png/john-doe.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
-          </div>
+          </div>-->
           <span class="header__logo-sub">Jack Waldron</span>
         </div>
         <div class="header__main">
@@ -402,6 +402,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
           </div>
 
           <script>
