Move html pages back to root

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     praesentium.
                   </p>
                   <a
-                          href="projects/starfighter.html"
+                          href="starfighter.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -274,7 +274,7 @@
                     praesentium.
                   </p>
                   <a
-                          href="projects/organ-defender.html"
+                          href="organ-defender.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -301,7 +301,7 @@
                     praesentium.
                   </p>
                   <a
-                          href="projects/sams-town.html"
+                          href="sams-town.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -328,7 +328,7 @@
                     praesentium.
                   </p>
                   <a
-                          href="projects/mars-base.html"
+                          href="mars-base.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -355,7 +355,7 @@
                     praesentium.
                   </p>
                   <a
-                          href="projects/ai-pathfinding.html"
+                          href="ai-pathfinding.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
@@ -382,7 +382,7 @@
                     praesentium.
                   </p>
                   <a
-                          href="projects/mad-dash-dispatch.html"
+                          href="mad-dash-dispatch.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_blank"
                   >Case Study</a
