--- a/starfighter.html
+++ b/starfighter.html
@@ -7,7 +7,7 @@
     <title>Case Study of Project 1</title>
     <meta name="description" content="Case study page of Project" />
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,40 +20,40 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <div class="header__logo-img-cont">
+          <!--<div class="header__logo-img-cont">
             <img
               src="../assets/png/john-doe.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
-          </div>
+          </div>-->
           <span class="header__logo-sub">Jack Waldron</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="../index.html" class="header__link"> Home </a>
+              <a href="/index.html" class="header__link"> Home </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="../index.html#about" class="header__link">About </a>
+              <a href="index.html#about" class="header__link">About </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="../index.html#projects" class="header__link">
+              <a href="index.html#projects" class="header__link">
                 Projects
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="../index.html#contact" class="header__link"> Contact </a>
+              <a href="index.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
             <img
-              src="../assets/svg/ham-menu.svg"
+              src="assets/svg/ham-menu.svg"
               alt="hamburger menu"
               class="header__main-ham-menu"
             />
             <img
-              src="../assets/svg/ham-menu-close.svg"
+              src="assets/svg/ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
             />
@@ -64,19 +64,19 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="../index.html"> Home </a>
+              <a href="index.html"> Home </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="../index.html#about"> About </a>
+              <a href="index.html#about"> About </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="../index.html#projects"> Projects </a>
+              <a href="index.html#projects"> Projects </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="../index.html#contact"> Contact </a>
+              <a href="index.html#contact"> Contact </a>
             </li>
           </ul>
         </div>
@@ -105,18 +105,18 @@
         <div class="project-details__content">
           <div class="slideshow-container">
             <div class="mySlides fade">
-              <img src="../assets/starfighter/starfighter-logo.png" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%">
             </div>
             <div class="mySlides fade">
-              <img src="../assets/starfighter/starfighter1.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%">
             </div>
             <div class="mySlides fade">
-              <img src="../assets/starfighter/starfighter2.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter2.jpg" style="width:100%; height:100%">
             </div>
             <div class="mySlides fade">
-              <img src="../assets/starfighter/starfighter3.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter3.jpg" style="width:100%; height:100%">
             </div><div class="mySlides fade">
-              <img src="../assets/starfighter/starfighter4.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter4.jpg" style="width:100%; height:100%">
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -205,35 +205,35 @@
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="../assets/png/linkedin-ico.png"
+                  src="assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="../assets/png/github-ico.png"
+                  src="assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="../assets/png/twitter-ico.png"
+                  src="assets/png/twitter-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="../assets/png/yt-ico.png"
+                  src="assets/png/yt-ico.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
-                  src="../assets/png/insta-ico.png"
+                  src="assets/png/insta-ico.png"
                   alt="icon"
                 />
               </a>
@@ -248,14 +248,14 @@
           </div>
         </div>
 
-        <div class="main-footer__lower">
+        <!--<div class="main-footer__lower">
           &copy; Copyright 2021. Made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
-        </div>
+        </div>-->
       </div>
     </footer>
-    <script src="../index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
