Add buttons switching between projects

--- a/starfighter.html
+++ b/starfighter.html
@@ -190,6 +190,27 @@
                 <div class="skills__skill">Android</div>
               </div>
             </div>
+            <div>
+              <table style="width: 100%;">
+                <tr>
+                  <td style="width: 50%">
+                    <a href="mad-dash-dispatch.html"
+                       class="btn btn--med btn--theme dynamicBgClr"
+                       target="_self"
+                       style="float:left"
+                    >Previous Project</a>
+                  </td>
+                  <td style="width: 50%">
+                    <a href="organ-defender.html"
+                       class="btn btn--med btn--theme dynamicBgClr"
+                       target="_self"
+                       style="float:right"
+                    >Next Project</a>
+                  </td>
+                </tr>
+              </table>
+
+            </div>
           </div>
         </div>
       </div>
