Project buttons stay in same tab

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   <a
                           href="starfighter.html"
                           class="btn btn--med btn--theme dynamicBgClr"
-                          target="_blank"
+                          target="_self"
                   >Case Study</a
                   >
                 </div>
@@ -276,7 +276,7 @@
                   <a
                           href="organ-defender.html"
                           class="btn btn--med btn--theme dynamicBgClr"
-                          target="_blank"
+                          target="_self"
                   >Case Study</a
                   >
                 </div>
@@ -303,7 +303,7 @@
                   <a
                           href="sams-town.html"
                           class="btn btn--med btn--theme dynamicBgClr"
-                          target="_blank"
+                          target="_self"
                   >Case Study</a
                   >
                 </div>
@@ -330,7 +330,7 @@
                   <a
                           href="mars-base.html"
                           class="btn btn--med btn--theme dynamicBgClr"
-                          target="_blank"
+                          target="_self"
                   >Case Study</a
                   >
                 </div>
@@ -357,7 +357,7 @@
                   <a
                           href="ai-pathfinding.html"
                           class="btn btn--med btn--theme dynamicBgClr"
-                          target="_blank"
+                          target="_self"
                   >Case Study</a
                   >
                 </div>
@@ -384,7 +384,7 @@
                   <a
                           href="mad-dash-dispatch.html"
                           class="btn btn--med btn--theme dynamicBgClr"
-                          target="_blank"
+                          target="_self"
                   >Case Study</a
                   >
                 </div>
@@ -433,79 +433,6 @@
               dots[slideIndex-1].className += " active";
             }
           </script>
-
-          <!--<div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="assets/starfighter/starfighter-logo.png"
-                alt="Earths only hope sceenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Starfighter: Earth's Only Hope</h3>
-              <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
-              </p>
-              <a
-                href="./starfighter.html"
-                class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
-                target="_blank"
-                >Case Study</a
-              >
-            </div>
-          </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/organ-defender/organ-defender-logo.jpg"
-                alt="Organ Defender Logo"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Organ Defender</h3>
-              <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
-              </p>
-              <a
-                href="./organ-defender.html"
-                class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
-                target="_blank"
-                >Case Study</a
-              >
-            </div>
-          </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/sams-town/sams-town-logo.png"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Sam's Town</h3>
-              <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
-              </p>
-              <a
-                href="./sams-town.html"
-                class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
-                target="_blank"
-                >Case Study</a
-              >
-            </div>
-          </div>-->
         </div>
       </div>
     </section>
