--- a/index.html
+++ b/index.html
@@ -37,11 +37,23 @@
             <li class="header__link-wrapper">
               <a href="./index.html#about" class="header__link">About </a>
             </li>
+
             <li class="header__link-wrapper">
-              <a href="./index.html#projects" class="header__link">
-                Projects
-              </a>
+              <div class="dropdown">
+                <a href="./index.html#projects" class="header__link">
+                  Projects
+                </a>
+                <div class="dropdown-content header__links" style="width: auto">
+                  <a href="starfighter.html" class="header__link">Starfighter</a>
+                  <a href="organ-defender.html" class="header__link">Organ Defender</a>
+                  <a href="sams-town.html" class="header__link">Sam's Town</a>
+                  <a href="mars-base.html" class="header__link">Mars Base</a>
+                  <a href="ai-pathfinding.html" class="header__link">AI Pathfinding</a>
+                  <a href="mad-dash-dispatch.html" class="header__link">Mad Dash Dispatch</a>
+                </div>
+              </div>
             </li>
+
             <li class="header__link-wrapper">
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
@@ -96,59 +108,6 @@
           <a href="./#projects" class="btn btn--bg">My Projects</a>
         </div>
       </div>
-      <!--<div class="home-hero__socials">
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/linkedin-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/github-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/twitter-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/yt-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a
-            href="#"
-            class="home-hero__social-icon-link home-hero__social-icon-link&#45;&#45;bd-none"
-          >
-            <img
-              src="./assets/png/insta-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-      </div>
-      <div class="home-hero__mouse-scroll-cont">
-        <div class="mouse"></div>
-      </div>-->
     </section>
     <section id="about" class="about sec-pad">
       <div class="main-container">
